--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@
 
     <!-- Bootstrap4 files-->
     <script src="{% static 'js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
 
     <!-- Font awesome 5 -->
@@ -25,7 +27,12 @@
     <!-- custom style -->
     <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+    </script>
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
@@ -43,22 +50,22 @@
 </head>
 
 <body>
-<div class="container-fluid">
-    <header class="section-header">
+    <div class="container-fluid">
+        <header class="section-header">
 
-        {% include 'includes/topbar.html' %}
+            {% include 'includes/topbar.html' %}
 
-        {% include 'includes/navbar.html' %}
+            {% include 'includes/navbar.html' %}
 
 
-    </header> <!-- section-header.// -->
-</div>
+        </header> <!-- section-header.// -->
+    </div>
 
-<div class="container">
-    {% block content %}
+    <div class="container">
+        {% block content %}
 
-    {% endblock %}
-</div>
+        {% endblock %}
+    </div>
 
 
 
