--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -23,9 +23,10 @@
 	</div> <!-- col.// -->
 	<!-- <a href="./store.html" class="btn btn-outline-primary">Store</a> -->
 	<div class="col-lg  col-md-6 col-sm-12 col">
-		<form action="#" class="search">
+		<form action="{% url 'store:search' %}" class="search" method="GET">
+			
 			<div class="input-group w-100">
-			    <input type="text" class="form-control" style="width:60%;" placeholder="Search">
+			    <input type="text" class="form-control" style="width:60%;" placeholder="Search Products, Brands, category" name="keyword">
 			    
 			    <div class="input-group-append">
 			      <button class="btn btn-primary" type="submit">
@@ -44,9 +45,9 @@
 							<a href="./register.html"> Register</a>
 						</div>
 					</div>
-					<a href="./cart.html" class="widget-header pl-3 ml-3">
+					<a href="{% url 'carts:cart' %}" class="widget-header pl-3 ml-3">
 						<div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
-						<span class="badge badge-pill badge-danger notify">0</span>
+						<span class="badge badge-pill badge-danger notify">{{cart_count}}</span>
 					</a>
 				</div> <!-- widgets-wrap.// -->
 			</div> <!-- col.// -->
