--- a/templates/store/single.html
+++ b/templates/store/single.html
@@ -13,78 +13,64 @@
             <div class="row no-gutters">
                 <div class="col-md-6">
                     <div class="container mx-auto">
-                        {% for image in product.product_image.all %}
-                            {% if image.is_feature %}
-                                <img class="img-fluid mx-auto d-block" style="width: auto;" src="{{image.image.url}}"
-                                alt="Responsive Image" alt="{{image.alt_text}}" />
-                            {% else %}
-                                <img class="img-fluid d-block-inline pt-3" width="100px" src="{{image.image.url}}"
-                                alt="Responsive Image" />
-                            {% endif %}
-                        {% endfor %}
+
+
+                        <img class="img-fluid mx-auto d-block" style="width: auto;" src="{{product.image.url}}"
+                            alt="Responsive Image" alt="{{image.alt_text}}" />
+
+
                     </div>
                 </div>
+
                 <main class="col-md-6 border-left">
-                    <article class="content-body">
+                    <form action="{% url 'carts:add_cart' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <article class="content-body">
 
-                        <h2 class="title">Off-White Odsy-1000 Low-Top Sneakers</h2>
+                            <h2 class="title">{{product.product_name}}</h2>
 
-                        <div class="mb-3">
-                            <var class="price h4">$815.00</var>
-                        </div>
-
-                        <p>Virgil Abloh’s Off-White is a streetwear-inspired collection that continues to break away
-                            from the conventions of mainstream fashion. Made in Italy, these black and brown Odsy-1000
-                            low-top sneakers.</p>
-
-
-                        <hr>
-                        <div class="row">
-                            <div class="item-option-select">
-                                <h6>Choose Color</h6>
-                                <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> Silver
-                                    </label>
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> Gray
-                                    </label>
-                                    <label class="btn btn-light active">
-                                        <input type="radio" name="radio_color checked"> Gold
-                                    </label>
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> Black
-                                    </label>
-                                </div>
+                            <div class="mb-3">
+                                <var class="price h4">${{product.price}}</var>
                             </div>
-                        </div> <!-- row.// -->
-                        <div class="row">
-                            <div class="item-option-select">
-                                <h6>Select Size</h6>
-                                <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> S
-                                    </label>
-                                    <label class="btn btn-light active">
-                                        <input type="radio" name="radio_color" checked> M
-                                    </label>
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> L
-                                    </label>
-                                    <label class="btn btn-light">
-                                        <input type="radio" name="radio_color"> XL
-                                    </label>
+
+                            <p>{{product.description}}</p>
+
+
+                            <hr>
+                            <div class="form-group">
+                                <div class="item-option-select">
+                                    <h6>Select Color</h6>
+                                    <select name="color" class="form-control">
+                                        <option value="" disabled selected>Choose Color</option>
+                                        {% for i in product.variation_set.colors %}
+                                        <option value="{{ i.variation_value | lower}}">{{ i.variation_value | capfirst}}
+                                        </option>
+                                        {% endfor %}
+                                    </select>
                                 </div>
-                            </div>
-                        </div> <!-- row.// -->
-                        <hr>
-                        {% if product.stock <= 0 %}
-                        <h5 class="text-danger">Out of Stock</h5>
-                        {% else %}
-                        <a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span>
-                            <i class="fas fa-shopping-cart"></i> </a>
-                        {% endif %}
-                    </article> <!-- product-info-aside .// -->
+                                <div class="item-option-select">
+                                    <h6>Select Size</h6>
+                                    <select name="size" class="form-control">
+                                        <option value="" disabled selected>Choose Size</option>
+                                        {% for i in product.variation_set.sizes %}
+                                        <option value="{{ i.variation_value | lower}}">{{ i.variation_value | capfirst}}
+                                        </option>
+                                        {% endfor %}
+
+                                    </select>
+
+                                </div>
+
+                                <hr>
+                                {% if product.stock <= 0 %}
+                                <h5 class="text-danger">Out of Stock</h5>
+                                {% else %}
+                                <button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span>
+                                    <i class="fas fa-shopping-cart"></i>
+                                </button>
+                                    {% endif %}
+                        </article> <!-- product-info-aside .// -->
+                    </form>
                 </main> <!-- col.// -->
             </div> <!-- row.// -->
         </div> <!-- card.// -->
