--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -7,7 +7,12 @@
 {% block content %}
 <section class="section-pagetop bg">
     <div class="container">
+        {% if 'search' in request.path %}
+        <h2 class="title-page">Search Result</h2>
+        {% else %}
         <h2 class="title-page">Our Store</h2>
+
+        {% endif %}
 
     </div> <!-- container //  -->
 </section>
@@ -126,42 +131,60 @@
 
                 <header class="border-bottom mb-4 pb-3">
                     <div class="form-inline">
-                        <span class="mr-md-auto"><b>{{ product_count }}</b> Items found </span>
+                        <span class="mr-md-auto text-muted"><b>{{ product_count }}</b> Items found </span>
 
                     </div>
                 </header><!-- sect-heading -->
 
                 <div class="row">
+                    {% if products %}
                     {% for product in products %}
                     <div class="col-md-3">
                         <div class="card card-product-grid">
                             <!-- <a href="./product-detail.html" class="img-wrap"> <img src="{{ product.images.url }}"> </a> -->
                             <a href="{{ product.get_url }}">
-                                {% for image in product.product_image.all %}
-                                {% if image.is_feature %}
-                                <img class="img-fluid" alt="Responsive Image" src="{{image.image.url}}" >
-                                {% endif %}
-                                {% endfor %}
-                              </a>
+
+                                <img class="img-fluid" alt="Responsive Image" src="{{product.image.url}}">
+
+                            </a>
                             <figcaption class="info-wrap">
-                                <a href="./product-detail.html" class="title">{{ product.product_name }}</a>
+                                <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
                                 <div class="price mt-1">${{ product.price }}</div> <!-- price-wrap.// -->
                             </figcaption>
                         </div>
                     </div> <!-- col.// -->
                     {% endfor %}
+                    {% else %}
+                    <div class="text-muted h3">No Result Found. Please Try Again</div>
+                    {% endif %}
 
                 </div> <!-- row end.// -->
 
 
                 <nav class="mt-4" aria-label="Page navigation sample">
+                    {% if products.has_other_pages %}
                     <ul class="pagination">
-                        <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-                        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        {% if products.has_previous %}
+                        <li class="page-item"><a class="page-link"
+                                href="?page={{ products.previous_page_number }}">Previous</a></li>
+                        {% else %}
+                        <li class="page-item disabled"><a class="page-link" href=>Previous</a></li>
+                        {% endif %}
+                        {% for i in products.paginator.page_range %}
+                        {% if products.number == i %}
+                        <li class="page-item active"><a class="page-link" href="">{{ i }}</a></li>
+                        {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                        {% endif %}
+                        {% endfor %}
+                        {% if products.has_next %}
+                        <li class="page-item"><a class="page-link" href="?page={{ products.next_page_number }}">Next</a>
+                        </li>
+                        {% else %}
+                        <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
+                        {% endif %}
                     </ul>
+                    {% endif %}
                 </nav>
 
             </main> <!-- col.// -->
