--- a/templates/store/single.html
+++ b/templates/store/single.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}
-{% if product %}{{product.title}}{% else %}Products {% endif %}
+{% if product %}{{product.product_name}}{% else %}Products {% endif %}
 {% endblock %}
 {% block content %}
 
