--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -19,7 +19,7 @@
 <!-- ========================= SECTION INTRO END// ========================= -->
 
 <!-- ========================= SECTION CONTENT ========================= -->
-<section class="section-content padding-y">
+<section class="section-content">
     <div class="container">
 
         <div class="row">
