--- a/templates/carts/cart_summary.html
+++ b/templates/carts/cart_summary.html
@@ -7,13 +7,7 @@
 
 <section class="section-content padding-y bg">
     <div class="container">
-        {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
+        {% include 'includes/alerts.html' %}
         <!-- ============================ COMPONENT 1 ================================= -->
         {% if not cart_items %}
         <div class="text-center">
