--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,56 +1,67 @@
 {% load static %}
 <section class="header-main border-bottom">
 	<div class="container">
-<div class="row align-items-center">
-	<div class="col-lg-2 col-md-3 col-6">
-		<a href="/" class="brand-wrap">
-			<img class="logo" src="{% static './images/logo.png' %}">
-		</a> <!-- brand-wrap.// -->
-	</div>
-	<div class="col-lg col-sm col-md col-6 flex-grow-0">
-		<div class="category-wrap dropdown d-inline-block float-right">
-			<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> 
-				<i class="fa fa-bars"></i> All category 
-			</button>
-			<div class="dropdown-menu">
-				{% for c in categories %}
-                <li {% if category.slug == c.slug %} class="selected" {% endif %}>
-                  <a class="dropdown-item" href="{{ c.get_url }}">{{ c.name|title }}</a>
-                </li>
-                {% endfor %}
+		<div class="row align-items-center">
+			<div class="col-lg-2 col-md-3 col-6">
+				<a href="/" class="brand-wrap">
+					<img class="logo" src="{% static './images/logo.png' %}">
+				</a> <!-- brand-wrap.// -->
 			</div>
-		</div>  <!-- category-wrap.// -->
-	</div> <!-- col.// -->
-	<!-- <a href="./store.html" class="btn btn-outline-primary">Store</a> -->
-	<div class="col-lg  col-md-6 col-sm-12 col">
-		<form action="{% url 'store:search' %}" class="search" method="GET">
-			
-			<div class="input-group w-100">
-			    <input type="text" class="form-control" style="width:60%;" placeholder="Search Products, Brands, category" name="keyword">
-			    
-			    <div class="input-group-append">
-			      <button class="btn btn-primary" type="submit">
-			        <i class="fa fa-search"></i>
-			      </button>
-			    </div>
-		    </div>
-		</form> <!-- search-wrap .end// -->
-	</div> <!-- col.// -->
-	<div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
-				<div class="d-flex justify-content-end mb-3 mb-lg-0">
-					<div class="widget-header">
-						<small class="title text-muted">Welcome guest!</small>
-						<div> 
-							<a href="./signin.html">Sign in</a> <span class="dark-transp"> | </span>
-							<a href="./register.html"> Register</a>
+			<div class="col-lg col-sm col-md col-6 flex-grow-0">
+				<div class="category-wrap dropdown d-inline-block float-right">
+					<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+						<i class="fa fa-bars"></i> All category
+					</button>
+					<div class="dropdown-menu">
+						{% for c in categories %}
+						<li {% if category.slug == c.slug %} class="selected" {% endif %}>
+							<a class="dropdown-item" href="{{ c.get_url }}">{{ c.name|title }}</a>
+						</li>
+						{% endfor %}
+					</div>
+				</div> <!-- category-wrap.// -->
+			</div> <!-- col.// -->
+			<!-- <a href="./store.html" class="btn btn-outline-primary">Store</a> -->
+			<div class="col-lg  col-md-6 col-sm-12">
+				<form action="{% url 'store:search' %}" class="search" method="GET">
+
+					<div class="input-group w-100">
+						<input type="text" class="form-control" style="width:60%;"
+							placeholder="Search Products, Brands, category" name="keyword">
+
+						<div class="input-group-append">
+							<button class="btn btn-primary" type="submit">
+								<i class="fa fa-search"></i>
+							</button>
 						</div>
 					</div>
+				</form> <!-- search-wrap .end// -->
+			</div> <!-- col.// -->
+			<div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
+				<div class="d-flex justify-content-end mb-3 mb-lg-0">
+					{% if user.id is None %}
+					<div class="widget-header">
+						<small class="title text-muted">Welcome guest!</small>
+						<div>
+							<a href="{% url 'accounts:login' %}">Sign in</a> <span class="dark-transp"> | </span>
+							<a href="{% url 'accounts:register' %}"> Register</a>
+						</div>
+					</div>
+					{% else %}
+					<div class="widget-header">
+						<small class="title text-muted">Welcome {{user.first_name}}!</small>
+						<div>
+							<a href="{% url 'accounts:dashboard' %}">Dashboard</a> <span class="dark-transp"> | </span>
+							<a href="{% url 'accounts:logout' %}">Logout</a>
+						</div>
+					</div>
+					{% endif %}
 					<a href="{% url 'carts:cart' %}" class="widget-header pl-3 ml-3">
 						<div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
 						<span class="badge badge-pill badge-danger notify">{{cart_count}}</span>
 					</a>
 				</div> <!-- widgets-wrap.// -->
 			</div> <!-- col.// -->
-</div> <!-- row.// -->
+		</div> <!-- row.// -->
 	</div> <!-- container.// -->
 </section> <!-- header-main .// -->
