--- a/templates/carts/cart_summary.html
+++ b/templates/carts/cart_summary.html
@@ -115,7 +115,7 @@
                         <p class="text-center mb-3">
                             <img src="{% static './images/misc/payments.png' %}" height="26">
                         </p>
-                        <a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
+                        <a href="{% url 'carts:checkout' %}" class="btn btn-primary btn-block"> Checkout </a>
                         <a href="{% url 'store:store' %}" class="btn btn-warning btn-block">Continue Shopping</a>
                     </div> <!-- card-body.// -->
                 </div> <!-- card.// -->
