Order and payment functions

--- a/templates/store/category.html
+++ b/templates/store/category.html
@@ -49,7 +49,7 @@
                                             href="{{ product.get_url }}">{{ product.product_name }}</a>
                                     </p>
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <small class="text-muted">${{product.price}}</small>
+                                        <small class="text-muted">₦ {{product.price}}</small>
                                     </div>
                                 </div>
                             </div>
