--- a/templates/store/single.html
+++ b/templates/store/single.html
@@ -30,7 +30,7 @@
                             <h2 class="title">{{product.product_name}}</h2>
 
                             <div class="mb-3">
-                                <var class="price h4">${{product.price}}</var>
+                                <var class="price h4">₦ {{product.price}}</var>
                             </div>
 
                             <p>{{product.description}}</p>
