--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -35,7 +35,7 @@
                         {{ form.phone_number }}
                     </div> <!-- form-group end.// -->
                     <div class="form-group col-md-6">
-                        <label>Country</label>
+                        <label>E-mail</label>
                         {{ form.email }}
                     </div> <!-- form-group end.// -->
                 </div> <!-- form-row.// -->
