--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
     </script>
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=AZtC-cxylRzuYxbS3IWYXbTFLuakPpB17yhl8qi5U1VmhyuBfXWHhRBebvsr1-mCbvDLqdhWJltCQ81q"></script>
 
     <script type="text/javascript">
         /// some script
