--- a/templates/carts/checkout.html
+++ b/templates/carts/checkout.html
@@ -1,151 +1,139 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Shopping Cart{% endblock %}
-
 {% block content %}
 
+
 <section class="section-content padding-y bg">
-    <div class="container">
+<div class="container">
 
-        <div class="row">
-            <aside class="col-lg-6">
-                <div class="card">
+<!-- ============================ COMPONENT 1 ================================= -->
 
-                    <div class="card-body">
-                        <h4 class="card-title mb-4">Billing Address</h4>
-                        <form action="" method="POST">
-                            {% csrf_token %}
-                            <div class="form-row">
-                                <div class="col form-group">
-                                    <label for="">First Name</label>
-                                    <input type="text" name="first_name" placeholder="Enter First Name"
-                                        class="form-control" required>
-                                </div>
-                                <div class="col form-group">
-                                    <label for="">Last Name</label>
-                                    <input type="text" name="first_name" placeholder="Enter Surname"
-                                        class="form-control" required>
-                                </div>
+<div class="row">
+	<aside class="col-lg-6">
+<div class="card">
+  <div class="card-body">
+    <h4 class="card-title mb-4">Billing Address</h4>
+    <form action="{% url 'orders:place_order' %}" method="POST">
+      {% csrf_token %}
+      <div class="form-row">
+        <div class="col form-group">
+          <label for="">First Name</label>
+          <input type="text" name="first_name" class="form-control" required>
+        </div>
+        <div class="col form-group">
+          <label for="">Last Name</label>
+          <input type="text" name="last_name" class="form-control" required>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="col form-group">
+          <label for="">Email</label>
+          <input type="email" name="email" class="form-control" required>
+        </div>
+        <div class="col form-group">
+          <label for="">Phone Number</label>
+          <input type="text" name="phone" class="form-control" required>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="col form-group">
+          <label for="">Address Line 1</label>
+          <input type="text" name="address_line_1" class="form-control" required>
+        </div>
+        <div class="col form-group">
+          <label for="">Address Line 2</label>
+          <input type="text" name="address_line_2" class="form-control">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="col form-group">
+          <label for="">City</label>
+          <input type="text" name="city" class="form-control" required>
+        </div>
+        <div class="col form-group">
+          <label for="">State</label>
+          <input type="text" name="state" class="form-control" required>
+        </div>
+        <div class="col form-group">
+          <label for="">Country</label>
+          <input type="text" name="country" class="form-control" required>
+        </div>
+        </div>
+        <div class="form-row">
+          <label for="">Order Note</label>
+          <textarea name="order_note" rows="2" class="form-control"></textarea>
+        </div>
 
-                            </div>
-                            <div class="form-row">
-                                <div class="col form-group">
-                                    <label for="">Email</label>
-                                    <input type="email" name="email" placeholder="Enter E-mail" class="form-control"
-                                        required>
-                                </div>
-                                <div class="col form-group">
-                                    <label for="">Phone Number</label>
-                                    <input type="text" name="phone_number" placeholder="Main Line" class="form-control"
-                                        required>
-                                </div>
 
-                            </div>
+  </div>
+</div> <!-- card.// -->
 
-                            <div class="form-row">
-                                <div class="col form-group">
-                                    <label for="">Address Line 1</label>
-                                    <input type="text" name="address_line_1" placeholder="Enter Shipping Address"
-                                        class="form-control" required>
-                                </div>
-                                <div class="col form-group">
-                                    <label for="">address_line_2</label>
-                                    <input type="text" name="address_line_2" placeholder="Enter Shipping Address 2"
-                                        class="form-control">
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <div class="col form-group">
-                                    <label for="">City</label>
-                                    <input type="text" name="city" placeholder="Enter City" class="form-control"
-                                        required>
-                                </div>
-                                <div class="col form-group">
-                                    <label for="">State</label>
-                                    <input type="text" name="state" placeholder="Enter State" class="form-control">
-                                </div>
-                                <div class="col form-group">
-                                    <label for="">Country</label>
-                                    <input type="text" name="country" placeholder="Enter Country" class="form-control">
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <label for="" class="fw-bold">Order Note</label> <br>
-                                <textarea name="order_note" id="" class="form-control" rows="2"></textarea>
-                            </div>
+	</aside> <!-- col.// -->
+	<aside class="col-lg-6">
 
-                    </div>
-                </div> <!-- card.// -->
+		<div class="card">
+		<div class="card-body">
+      <table class="table table-borderless table-shopping-cart">
+      <thead class="text-muted">
+      <tr class="small text-uppercase">
+        <th scope="col">Product</th>
+        <th scope="col" width="120">Quantity</th>
+        <th scope="col" width="120">Price</th>
 
-            </aside> <!-- col.// -->
-            <aside class="col-lg-6">
+      </tr>
+      </thead>
+      <tbody>
 
-                <div class="card">
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-borderless table-shopping-cart">
-                                <thead class="text-muted">
-                                    <tr class="small text-uppercase">
-                                        <th>Product</th>
-                                        <th>Quantity</th>
-                                        <th>Price</th>
+      {% for cart_item in cart_items %}
+      <tr>
+      	<td>
+      		<figure class="itemside align-items-center">
+      			<div class="aside"><img src="{{ cart_item.product.image.url }}" class="img-sm"></div>
+      			<figcaption class="info">
+      				<a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
+      				<p class="text-muted small">
+      					{% if cart_item.variations.all %}
+      						{% for item in cart_item.variations.all %}
+      							{{ item.variation_category | capfirst }} : {{ item.variation_value | capfirst }} <br>
+      						{% endfor %}
+      					{% endif %}
+      				</p>
+      			</figcaption>
+      		</figure>
+      	</td>
+      	<td>
+      		<!-- col.// -->
+      				<label for="">{{cart_item.quantity}}</label>
+      	</td>
+      	<td>
+      		<div class="price-wrap">
+      			<var class="price">₦ {{ cart_item.sub_total }}</var>
+      			<small class="text-muted"> ₦ {{ cart_item.product.price }} each </small>
+      		</div> <!-- price-wrap .// -->
+      	</td>
 
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for cart_item in cart_items %}
-                                    <tr>
-                                        <td>
-                                            <figure class="itemside align-items-center">
-                                                <div class="aside">
-                                                    <img src="{{cart_item.product.image.url}}" class="img-sm">
-                                                </div>
-                                                <figcaption class="info">
-                                                    <a href="{{ cart_item.product.get_url }}"
-                                                        class="title text-dark">{{cart_item.product.product_name}}</a>
-                                                    <p class="text-muted small">
-                                                        {% if cart_item.variations.all %}
-                                                        {% for item in cart_item.variations.all %}
-                                                        {{ item.variation_category |lower }}:
-                                                        {{ item.variation_value | capfirst}} <br>
-                                                        {% endfor %}
-                                                        {% endif %}
-                                                    </p>
-                                                </figcaption>
-                                            </figure>
-                                        </td>
-                                        <td>
-                                            <!-- col.// -->
-                                            <div class="col">
-                                                <div class="input-group input-spinner">
-                                                    {{ cart_item.quantity }}
-                                                </div> <!-- input-group.// -->
-                                            </div> <!-- col.// -->
-                                        </td>
-                                        <td>
-                                            <div class="price-wrap">
-                                                <var class="price">${{cart_item.sub_total}}.00</var>
-                                                <small class="text-muted"> ${{cart_item.product.price}} each </small>
-                                            </div> <!-- price-wrap .// -->
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                        <button href="{% url 'carts:checkout' %}" class="btn btn-primary btn-block"> Place Order </button>
-                        <a href="{% url 'store:store' %}" class="btn btn-warning btn-block">Continue Shopping</a>
-                    </div> <!-- card-body.// -->
-                </div> <!-- card.// -->
+      </tr>
+      {% endfor %}
 
-            </aside> <!-- col.// -->
+      </tbody>
+      </table>
 
-            </form>
-        </div> <!-- row.// -->
-        <!-- ============================ COMPONENT 1 END .// ================================= -->
+      <button type="submit" name="submit" class="btn btn-primary btn-block">Place Order</button>
+			<a href="{% url 'store:store' %}" class="btn btn-warning btn-block">Continue Shopping</a>
+      </form>
+		</div> <!-- card-body.// -->
+		</div> <!-- card.// -->
 
-    </div> <!-- container .//  -->
+
+</aside> <!-- col.// -->
+
+
+</div> <!-- row.// -->
+
+<!-- ============================ COMPONENT 1 END .// ================================= -->
+
+</div> <!-- container .//  -->
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
 
