--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -41,7 +41,7 @@
                     </a>
                     <figcaption class="info-wrap">
                         <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
-                        <div class="price mt-1">${{ product.price }}</div> 
+                        <div class="price mt-1">₦ {{ product.price }}</div> 
                     </figcaption>
                 </div>
             </div> 
