--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -97,25 +97,25 @@
                                         <label>Min</label>
                                         <!-- <input class="form-control" placeholder="$0" type="number"> -->
                                         <select class="mr-2 form-control">
-                                            <option value="0">$0</option>
-                                            <option value="50">$50</option>
-                                            <option value="100">$100</option>
-                                            <option value="150">$150</option>
-                                            <option value="200">$200</option>
-                                            <option value="500">$500</option>
-                                            <option value="1000">$1000</option>
+                                            <option value="0">₦0</option>
+                                            <option value="50">₦50</option>
+                                            <option value="100">₦100</option>
+                                            <option value="150">₦150</option>
+                                            <option value="200">₦200</option>
+                                            <option value="500">₦$500</option>
+                                            <option value="1000">₦1000</option>
                                         </select>
                                     </div>
                                     <div class="form-group text-right col-md-6">
                                         <label>Max</label>
                                         <select class="mr-2 form-control">
-                                            <option value="50">$50</option>
-                                            <option value="100">$100</option>
-                                            <option value="150">$150</option>
-                                            <option value="200">$200</option>
-                                            <option value="500">$500</option>
-                                            <option value="1000">$1000</option>
-                                            <option value="2000">$2000+</option>
+                                            <option value="50">₦50</option>
+                                            <option value="100">₦100</option>
+                                            <option value="150">₦150</option>
+                                            <option value="200">₦200</option>
+                                            <option value="500">₦500</option>
+                                            <option value="1000">₦1000</option>
+                                            <option value="2000">₦2000+</option>
                                         </select>
                                     </div>
                                 </div> <!-- form-row.// -->
@@ -149,7 +149,7 @@
                             </a>
                             <figcaption class="info-wrap">
                                 <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
-                                <div class="price mt-1">${{ product.price }}</div> <!-- price-wrap.// -->
+                                <div class="price mt-1">₦ {{ product.price }}</div> <!-- price-wrap.// -->
                             </figcaption>
                         </div>
                     </div> <!-- col.// -->
