--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -6,12 +6,13 @@
 <div>
   {% include 'includes/alerts.html' %}
 </div>
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+<div class="col col-md-9 col-lg-6">
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <!-- <div class="carousel-item active">
         <img src="{% static 'images/banners/1.jpg' %}" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
+      </div> -->
+      <div class="carousel-item active">
         <img src="{% static 'images/banners/01.jpg' %}" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
@@ -19,6 +20,7 @@
       </div>
     </div>
   </div>
+</div>
 <!-- ========================= SECTION  ========================= --> 
 <section class="section-name padding-y-sm">
     <div class="container">
