--- a/meshacart/static/css/responsive.css
+++ b/meshacart/static/css/responsive.css
@@ -38,6 +38,7 @@
   .section-header .header-main .brand-wrap {
     margin-bottom: 1rem;
     display: inline-block;
+    margin-right: 30px;
   }
   .section-header .header-main .search {
     margin-bottom: 1rem;
