--- a/templates/includes/topbar.html
+++ b/templates/includes/topbar.html
@@ -17,8 +17,9 @@
             </li>
         </ul>
         <ul class="navbar-nav">
-            <li><a href="#" class="nav-link"> <i class="fa fa-envelope"></i> Email </a></li>
-            <li><a href="#" class="nav-link"> <i class="fa fa-phone"></i> Call us </a></li>
+            <li><a href="mailto:meshlrd14@gmail.com?subject = Feedback&body = Message" class="nav-link"> <i class="fa fa-envelope"></i> Email </a></li>
+            
+            <li><a href="#" class="nav-link"> <i class="fa fa-phone"></i> +234-813-077-2189 </a></li>
         </ul> <!-- list-inline //  -->
       </div> <!-- navbar-collapse .// -->
     </div> <!-- container //  -->
