--- a/meshacart/static/css/ui.css
+++ b/meshacart/static/css/ui.css
@@ -1412,4 +1412,10 @@ a[class*=card]:hover .title {
   display: block;
 }
 
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
 /*# sourceMappingURL=ui.css.map */
