--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -9,22 +9,7 @@
 
     <div class="container">
         <div class="row">
-            <aside class="col-md-3">
-                <!--   SIDEBAR   -->
-                <ul class="list-group">
-                    <a class="list-group-item active" href="#"> My order history </a>
-                    <a class="list-group-item" href="#"> Transactions </a>
-                    <a class="list-group-item" href="#"> Return and refunds </a>
-                    <a class="list-group-item" href="#">Settings </a>
-                    <a class="list-group-item" href="#"> My Selling Items </a>
-                    <a class="list-group-item" href="#"> Received orders </a>
-                </ul>
-                <br>
-                <a class="btn btn-light btn-block" href="{% url 'accounts:logout' %}"> <i class="fa fa-power-off"></i>
-                    <span class="text">Logout</span>
-                </a>
-                <!--   SIDEBAR .//END   -->
-            </aside>
+            {% include 'includes/dashboardsidebar.html' %}
             <main class="col-md-9">
                 <article class="card">
                     <header class="card-header">
@@ -33,67 +18,35 @@
                     </header>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-md-8">
-                                <h6 class="text-muted">Delivery to</h6>
-                                <p>Michael Jackson <br>
-                                    Phone +1234567890 Email: myname@pixsellz.com <br>
-                                    Location: Home number, Building name, Street 123, Tashkent, UZB <br>
-                                    P.O. Box: 100123
-                                </p>
-                            </div>
-                            <div class="col-md-4">
-                                <h6 class="text-muted">Payment</h6>
-                                <span class="text-success">
-                                    <i class="fab fa-lg fa-cc-visa"></i>
-                                    Visa **** 4216
-                                </span>
-                                <p>Subtotal: $356 <br>
-                                    Shipping fee: $56 <br>
-                                    <span class="b">Total: $456 </span>
-                                </p>
-                            </div>
+                            
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="card text-center">
+                                            <div class="card-body">
+                                                <div class="card-title">
+                                                    <h5>Total Orders</h5>
+                                                    <h4>{{ order_count }}</h4>
+                                                    <a href="{% url 'accounts:my_orders' %}">View Orders</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="card text-center">
+                                            <div class="card-body">
+                                                <img class="card-img avatar" src="{{ userprofile.profile_picture.url }}" alt="Profile Pic">
+                                                <p class="mb-0">{{ user.email }}</p>
+                                                <p>{{ user.phone_number }}</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div> <!-- row.// -->
+                            </div> <!-- card-body .// -->
                         </div> <!-- row.// -->
                     </div> <!-- card-body .// -->
-                    <div class="table-responsive">
-                        <table class="table table-hover">
-                            <tr>
-                                <td width="65">
-                                    <img src="../images/items/1.jpg" class="img-xs border">
-                                </td>
-                                <td>
-                                    <p class="title mb-0">Product name goes here </p>
-                                    <var class="price text-muted">USD 145</var>
-                                </td>
-                                <td> Seller <br> Nike clothing </td>
-                                <td width="250"> <a href="#" class="btn btn-outline-primary">Track order</a> <a href="#"
-                                        class="btn btn-light"> Details </a> </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <img src="../images/items/2.jpg" class="img-xs border">
-                                </td>
-                                <td>
-                                    <p class="title mb-0">Another name goes here </p>
-                                    <var class="price text-muted">USD 15</var>
-                                </td>
-                                <td> Seller <br> ABC shop </td>
-                                <td> <a href="#" class="btn btn-outline-primary">Track order</a> <a href="#"
-                                        class="btn btn-light"> Details </a> </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <img src="../images/items/3.jpg" class="img-xs border">
-                                </td>
-                                <td>
-                                    <p class="title mb-0">The name of the product goes here </p>
-                                    <var class="price text-muted">USD 145</var>
-                                </td>
-                                <td> Seller <br> Wallmart </td>
-                                <td> <a href="#" class="btn btn-outline-primary">Track order</a> <a href="#"
-                                        class="btn btn-light"> Details </a> </td>
-                            </tr>
-                        </table>
-                    </div> <!-- table-responsive .end// -->
+                    
+
                 </article> <!-- order-group.// -->
             </main>
         </div> <!-- row.// -->
