--- a/templates/accounts/order_detail.html
+++ b/templates/accounts/order_detail.html
@@ -4,17 +4,8 @@
 {% load humanize %}
 {% block content %}
 
-
-<div class="container" style="margin-top: 50px;">
-    <center><i class="fas fa-check-circle" style="font-size: 72px;margin-bottom: 20px;color: #28A745;"></i></center>
-    <h2 class="text-center">Payment Successful</h2>
-	<br>
-	<div class="text-center">
-		<a href="{% url 'store:store' %}" class="btn btn-success">Shop more</a>
-	</div>
-</div>
-
-<div class="container" style="margin: 0 auto;width: 50%;padding: 50px;background: #f1f1f1;margin-top: 50px;margin-bottom: 50px;">
+<div class="container"
+    style="margin: 0 auto;width: 50%;padding: 50px;background: #f1f1f1;margin-top: 50px;margin-bottom: 50px;">
     <div class="row invoice row-printable">
         <div class="col-md-12">
             <!-- col-lg-12 start here -->
@@ -25,7 +16,8 @@
                         <!-- Start .row -->
                         <div class="col-lg-6">
                             <!-- col-lg-6 start here -->
-                            <div class="invoice-logo"><img src="{% static '/images/logo.png' %}" alt="Invoice logo" style="max-height: 40px;"></div>
+                            <div class="invoice-logo"><img src="{% static '/images/logo.png' %}" alt="Invoice logo"
+                                    style="max-height: 40px;"></div>
                         </div>
                         <!-- col-lg-6 end here -->
                         <div class="col-lg-6">
@@ -46,10 +38,10 @@
                             <div class="invoice-details mt25">
                                 <div class="well">
                                     <ul class="list-unstyled mb0">
-                                        <li><strong>Order: &nbsp;</strong># {{ order_number }}</li>
-                                        <li><strong>Transaction ID: &nbsp;</strong>{{transID}}</li>
+                                        <li><strong>Order: &nbsp;</strong>#{{ order.order_number }}</li>
+                                        <li><strong>Transaction ID: &nbsp;</strong>{{order.payment.payment_id}}</li>
                                         <li><strong>Order Date:</strong> {{ order.created_at }}</li>
-                                        <li><strong>Status:</strong> {{payments.status }}</li>
+                                        <li><strong>Status:</strong> {{order.payment.status }}</li>
                                     </ul>
                                 </div>
                             </div>
@@ -65,14 +57,15 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            {% for item in order_product %}
+                                            {% for item in order_detail %}
                                             <tr>
                                                 <td>{{ item.product.product_name}}
                                                     <p class="text-muted small">
                                                         {% if item.variations.all %}
-                                                            {% for i in item.variations.all %}
-                                                                {{ i.variation_category | capfirst }} : {{ i.variation_value | capfirst }} <br>
-                                                            {% endfor%}
+                                                        {% for i in item.variations.all %}
+                                                        {{ i.variation_category | capfirst }} :
+                                                        {{ i.variation_value | capfirst }} <br>
+                                                        {% endfor%}
                                                         {% endif %}
                                                     </p>
                                                 </td>
@@ -85,7 +78,7 @@
                                         <tfoot>
                                             <tr>
                                                 <th colspan="2" class="text-right">Sub Total:</th>
-                                                <th class="text-center">₦ {{subtotal | intcomma }}0</th>
+                                                <th class="text-center">₦ {{ subtotal| intcomma }}0</th>
                                             </tr>
                                             <tr>
                                                 <th colspan="2" class="text-right">Tax:</th>
@@ -113,7 +106,7 @@
         </div>
         <!-- col-lg-12 end here -->
     </div>
-    </div>
+</div>
 
 
 {% endblock %}
